--- a/exercicios/aula06/ex004.html
+++ b/exercicios/aula06/ex004.html
@@ -8,5 +8,11 @@
 </head>
 <body>
     
+    <script>
+        var nome = prompt("Qual o seu nome?")
+        document.write(`Seu nome tem ${nome.length} letras!<br>`)
+        document.write(`Seu nome em caixa alta fica: ${nome.toUpperCase()}<br>`)
+        document.write(`Seu nome em minusculas fica: ${nome.toLowerCase()}`)
+    </script>
 </body>
 </html>
