--- a/exercicios/aula12ex/ex015/modelo.html
+++ b/exercicios/aula12ex/ex015/modelo.html
@@ -9,19 +9,19 @@
 </head>
 <body>
     <header>
-        <h1>Titulo</h1>
+        <h1>Verificador de Idade</h1>
     </header>
     <section>
         <div>
             <label for="iano">Ano de Nascimento:</label>
             <input type="number" name="ano" id="iano"><br>
-            <label>Sexo:</label>
-            <input type="radio" name="sexo" id="sexo1" value="M">M
-            <input type="radio" name="sexo" id="sexo2" value="F">F <br>
-            <button>Verificar</button>
+            <p>Sexo:</p>
+            <input type="radio" name="sexo" id="sexo1" value="M"><label for="sexo1">Masculino</label>
+            <input type="radio" name="sexo" id="sexo2" value="F"><label for="sexo2">Feminino</label><br>
+            <button id="btn-verify" onclick="verify()">Verificar</button>
         </div>
-        <div>
-
+        <div id="img">
+            <img src="" alt="" id="foto">
         </div>
     </section>
     <footer>
