ex016 concluido e com plus

--- a/exercicios/aula12ex/ex015/modelo.html
+++ b/exercicios/aula12ex/ex015/modelo.html
@@ -21,7 +21,7 @@
             <button id="btn-verify" onclick="verify()">Verificar</button>
         </div>
         <div id="img">
-            <img src="" alt="" id="foto">
+            <img src="img/default.png" alt="" id="foto">
         </div>
     </section>
     <footer>
