--- a/exercicios/aula12ex/ex016/modelo2.html
+++ b/exercicios/aula12ex/ex016/modelo2.html
@@ -5,18 +5,24 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
-    <title>horario</title>
+    <title>horário</title>
 </head>
-<body>
+<body id="body" onload="carregar()">
     <header>
         <h1>Titulo</h1>
     </header>
     <section>
-        <div></div>
-        <div></div>
+        <div id="msg">
+            aqui vai aparecer a mensagem...
+        </div>
+        <div id="foto">
+            <img id="imagem" src="img/noite.jpg" alt="">
+        </div>
     </section>
     <footer>
         <p>&copy; CursoemVideo</p>
     </footer>
+
+    <script src="script.js"></script>
 </body>
 </html>
