--- a/exercicios/aula12ex/ex016/modelo2.html
+++ b/exercicios/aula12ex/ex016/modelo2.html
@@ -9,7 +9,7 @@
 </head>
 <body id="body" onload="carregar()">
     <header>
-        <h1>Titulo</h1>
+        <h1>Hora Atual</h1>
     </header>
     <section>
         <div id="msg">
