--- a/exercicios/aula12ex/ex015/modelo.html
+++ b/exercicios/aula12ex/ex015/modelo.html
@@ -14,14 +14,16 @@
     <section>
         <div>
             <label for="iano">Ano de Nascimento:</label>
-            <input type="number" name="ano" id="iano"><br>
-            <p>Sexo:</p>
-            <input type="radio" name="sexo" id="sexo1" value="M"><label for="sexo1">Masculino</label>
-            <input type="radio" name="sexo" id="sexo2" value="F"><label for="sexo2">Feminino</label><br>
+            <input type="number" name="ano" id="iano" value="2000"><br>
+            <p> 
+                Sexo:
+                <input type="radio" name="sexo" id="mas" value="M" checked><label for="mas">Masculino</label>
+                <input type="radio" name="sexo" id="fem" value="F"><label for="fem">Feminino</label><br>
+            </p>
             <button id="btn-verify" onclick="verify()">Verificar</button>
         </div>
-        <div id="img">
-            <img src="img/default.png" alt="" id="foto">
+        <div id="res">
+            Preencha os dados para exibir a imagem
         </div>
     </section>
     <footer>
