--- a/exercicios/aula14ex/ex018/index.html
+++ b/exercicios/aula14ex/ex018/index.html
@@ -9,12 +9,20 @@
 </head>
 <body>
     <header>
-        <h1>Titulo</h1>
+        <h1>Tabuada</h1>
     </header>
     <section>
         <div>
+            <label for="num1"></label>
+            <input type="number" name="num1" id="num1"> &#x2716;
+            <label for="num2"></label>
+            <input type="number" name="num2" id="num2">
+            <button id="calc" onclick="tabuada()">Tabuada</button>
         </div>
-        <div>
+        <div id="res">
+            <select name="tab" id="tab">
+                
+            </select>
         </div>
     </section>
     <footer>
